cabal-version: 3.0
name: kabigon
version: 0.1.0.0
author: Sam Breese
copyright: 2020 Sam Breese

library
  default-language: Haskell2010
  hs-source-dirs:
    src
  exposed-modules:
    Kabigon.Prelude
    Kabigon.Savefile
    Kabigon.Parser
  other-modules:
    Paths_kabigon
  default-extensions: NoImplicitPrelude TupleSections LambdaCase MultiWayIf BangPatterns TypeOperators OverloadedStrings OverloadedLists ExplicitForAll TypeApplications ScopedTypeVariables DeriveFunctor DeriveFoldable DeriveTraversable DeriveGeneric GeneralizedNewtypeDeriving FlexibleInstances FlexibleContexts TypeFamilies DataKinds KindSignatures RankNTypes
  ghc-options: -Wall -Werror
  build-depends:
      base
    , text
    , bytestring
    , binary
    , vector
    , containers
    , bimap
    , directory
    , filepath
    , lens
    , logging
    , mtl
    , optparse-applicative
    , random
    , safe-exceptions
    , time
    , raw-strings-qq

executable kabigon
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs:
    main
  default-extensions: NoImplicitPrelude TupleSections LambdaCase MultiWayIf BangPatterns TypeOperators OverloadedStrings OverloadedLists ExplicitForAll TypeApplications ScopedTypeVariables DeriveFunctor DeriveFoldable DeriveTraversable DeriveGeneric GeneralizedNewtypeDeriving FlexibleInstances FlexibleContexts TypeFamilies DataKinds KindSignatures
  ghc-options: -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , kabigon